# Telescope_Guider

./: .gitignore
GUI/: form.ui  mainwindow.py  playground.pyproject  requirements.txt  ui_form.py
GUI/src/: WCS.py  control_algorithm.py  kabsch.py  logger.py  mqtt_handler.py  nothing.py  preview.py  star_detection.py  telescope_controller.py
GUI/src/test/: some_tests.py
code/: Makefile  stepper_controller_code.ioc
code/Core/Src/: main.c  stm32f4xx_hal_msp.c
code_prototype/: generate_steps.py
code_prototype/Core/Inc/: main.h  stepper_driver.h
code_prototype/Core/Src/: stepper_driver.c
imagerController/: CMakeLists.txt  README.md  build_imager.sh  install_arm8.sh  install_x64.sh  main.cpp  run_tests.sh
imagerController/app/: CMakeLists.txt  main.cpp
imagerController/app/examples/ASI_lib/demo/: Makefile  image.raw  main_SDK2_snap.cpp  main_SDK2_video.cpp
imagerController/app/inc/: Worker.hpp  cameraController.hpp  logger.hpp  motorMonitor.hpp  mqtt_client.hpp  starLocator.hpp  stepperComm.hpp  telescopeIdentifier.hpp
imagerController/app/src/: Worker.cpp  cameraController.cpp  motorMonitor.cpp  mqtt_client.cpp  starLocator.cpp  stepperComm.cpp  telescopeIdentifier.cpp
imagerController/inc/: cameraController.hpp  logger.hpp
imagerController/src/: cameraController.cpp  logger.cpp
imagerController/test_images/series_1/: image10.raw  image16.raw  image18.raw  image20.raw  image22.raw  image23.raw  image25.raw  image27.raw  image28.raw  info.csv
imagerController/test_images/series_2/: info.csv
imagerController/test_images/series_3/: info.csv
imagerController/tests/: CMakeLists.txt
imagerController/tests/starLocator_test/: CMakeLists.txt  RawToTiff  starLocator_test.cpp  test_im1.raw
imagerController/tests/starLocator_test/series_2000ms/: image11.raw  image12.raw  image13.raw  image14.raw  image15.raw  image17.raw  image19.raw  image21.raw  image24.raw  image26.raw  image29.raw  image30.raw
imagerController/tests/telescopeIdentifier_test/: CMakeLists.txt  telescopeIdentifier_test.cpp
mqtt_streamer/: image_transmiter.py
protection_circuitry/prot_cir/: fp-info-cache  fp-lib-table  prot_cir-B_Cu.gbl  prot_cir-B_Mask.gbs  prot_cir-B_Paste.gbp  prot_cir-B_Silkscreen.gbo  prot_cir-Edge_Cuts.gm1  prot_cir-F_Cu.gtl  prot_cir-F_Mask.gts  prot_cir-F_Paste.gtp  prot_cir-F_Silkscreen.gto  prot_cir-NPTH.drl  prot_cir-PTH.drl  prot_cir.kicad_pcb  prot_cir.kicad_prl  prot_cir.kicad_pro  prot_cir.kicad_sch
protection_circuitry/prot_cir/Hewelisz.pretty/: Hewelusz_fuse_holder.kicad_mod
protection_circuitry/prot_cir/gerbers/: prot_cir-B_Cu.gbl  prot_cir-B_Mask.gbs  prot_cir-B_Paste.gbp  prot_cir-B_Silkscreen.gbo  prot_cir-Edge_Cuts.gm1  prot_cir-F_Cu.gtl  prot_cir-F_Mask.gts  prot_cir-F_Paste.gtp  prot_cir-F_Silkscreen.gto  prot_cir-NPTH.drl  prot_cir-PTH.drl
rawToAny/: CMakeLists.txt
rawToTiff/: CMakeLists.txt  main.cpp
schemes/: PowerManager.drawio  buzzer.drawio  dsdsadsadsadsadsa.drawio
services/: accesspoint.service  guider.service  solver.service
solverServer/: requirements.txt  solveServer.py
starCenterFinding/: starFinding.asv  starFinding.m
stepper_controller_V2/GUI/StepperGUI/: form.ui  mainwindow.py  pla.xml  requirements.txt  telescope_control.py  ui_form.py  view_transfrom.py
stepper_controller_V2/GUI/StepperGUI/src/: kalman.py  star_detection.py  telescope_control.py  view_transfrom.py
stepper_controller_V2/pcb/: BOM.xlsx  motors_section.kicad_sch  stepper_controller_v2.kicad_pcb  stepper_controller_v2.kicad_prl  stepper_controller_v2.kicad_pro  stepper_controller_v2.kicad_sch
stepper_controller_V2/pcb/stepper_controller_v2/: fp-info-cache  fp-lib-table  motors_section.kicad_sch  pcb - Shortcut.lnk  stars.kicad_mod  stars.kicad_sym  stepper_controller_v2-top-pos.csv  stepper_controller_v2.csv  stepper_controller_v2.kicad_pcb  stepper_controller_v2.kicad_prl  stepper_controller_v2.kicad_pro  stepper_controller_v2.kicad_sch  stepper_controller_v2_rev2.0.csv
stepper_controller_V2/pcb/stepper_controller_v2.pretty/: stars.kicad_mod
stepper_controller_V2/pcb/stepper_controller_v2/gerbers/: stepper_controller_v2-B_Cu.gbl  stepper_controller_v2-B_Mask.gbs  stepper_controller_v2-B_Paste.gbp  stepper_controller_v2-B_Silkscreen.gbo  stepper_controller_v2-Edge_Cuts.gm1  stepper_controller_v2-F_Cu.gtl  stepper_controller_v2-F_Mask.gts  stepper_controller_v2-F_Paste.gtp  stepper_controller_v2-F_Silkscreen.gto  stepper_controller_v2-In1_Cu.g2  stepper_controller_v2-In2_Cu.g3  stepper_controller_v2-NPTH.drl  (+2 more)
stepper_controller_V2/stepper_controller_code/: .mxproject  Makefile  STM32-for-VSCode.config.yaml  STM32Make.make  get_microsteps_array.py  stepper_controller_code.ioc
webProxy/client/: main.py
webProxy/server/: main.py
webserver/todo/: angular.json  package-lock.json  package.json
webserver/todo/src/: index.html  main.ts  styles.css
(+28 files in other folders)
